force-app/main/default/objects/Work_Item__c.object
<CustomObject>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Assignee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Items</relationshipLabel>
        <relationshipName>Work_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Difficulty_Level__c</fullName>
        <label>Difficulty Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_End_date__c</fullName>
        <label>Estimated End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Item_Name__c</fullName>
        <displayFormat>WI-{0000000}</displayFormat>
        <label>Work Item Name</label>
        <type>AutoNumber</type>
    </fields>
    <label>Work Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Work_Items_by_Start_Date</fullName>
        <columns>Start_Date__c</columns>
        <columns>Work_Item_Name__c</columns>
        <columns>NAME</columns>
        <columns>Assignee__c</columns>
        <columns>Estimated_End_date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Work Items by Start Date</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Items</pluralLabel>
    <recordTypes>
        <fullName>Action</fullName>
        <active>true</active>
        <label>Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fix</fullName>
        <active>true</active>
        <label>Fix</label>
    </recordTypes>
    <recordTypes>
        <fullName>Idea</fullName>
        <active>true</active>
        <label>Idea</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>